Bug 427530 - Shutdown and restart buttons are missing from fullscreen application dashboard.
Summary: Shutdown and restart buttons are missing from fullscreen application dashboard.
Status: RESOLVED FIXED
Alias: None
Product: kdeplasma-addons
Classification: Unmaintained
Component: Application Dashboard (other bugs)
Version First Reported In: 5.19.5
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-10-11 05:08 UTC by Jishan Bhattacharya
Modified: 2022-05-17 07:39 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24.6
Sentry Crash Report:


Attachments
Screenshot of the missing buttons (770.52 KB, image/png)
2020-10-11 05:08 UTC, Jishan Bhattacharya
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jishan Bhattacharya 2020-10-11 05:08:14 UTC
Created attachment 132268 [details]
Screenshot of the missing buttons

SUMMARY

After updating my arch linux I found that the power buttons and restart buttons are gone from the bottom left corner of the fullscreen application dashboard, leaving aside their dear friend logout button. However I do see all the power buttons in the confirm exit dialogue box, after clicking the log out button. So from there, I'm able to shutdown and restart my PC for now. 

I did try restoring the missing buttons, but they all worked as a temporary fix. 
At first I tried deleting the old instance of the "app dashboard" widget from the dock and add a fresh new instance of it. Later I tried adding the missing buttons from the "power/session" category. This all worked for the current session and restarting the computer yet again makes our login button isolated. Poor login button! :(


STEPS TO REPRODUCE

I know this is going to be very difficult but I'm not really sure about the steps to reproduce this bug. The only thing that I did was updated my arch linux and after a restart, I noticed that the buttons are gone.


OBSERVED RESULT

The login button is isolated at the button left corner of the app dashboard.


EXPECTED RESULT

Should be with their pals shutdown and restart buttons.


SOFTWARE/OS VERSIONS

KDE Plasma Version: 5.19.5
KDE Frameworks Version: 5.74.0
Qt Version: 5.15.1
Comment 1 Aditya Prajapati 2020-10-13 19:57:27 UTC
Hi,

I am facing the same issue and have not been able to resolve it. Your workaround works for me as well and the exact behaviour is observed in my system as well.

Did you happen to find a solution?

Thanks.
Comment 2 Jishan Bhattacharya 2020-10-14 02:55:05 UTC
If you're looking for a permanent fix then probably not. I also don't think that this will be fixed by the developers any time soon.
Comment 3 Aditya Prajapati 2020-10-14 15:04:50 UTC
Are you facing this issue on the default KDE panel or do you use something like Latte Dock?

I was using latte dock when this issue hit me, I removed latte dock and am using the default panel now where this issue does not seem to exist.

If you are using a custom dock/panel, can you try switching temporarily to the default one and see if this issue persists? Maybe this is not a KDE bug/issue.
Comment 4 Isaac Wismer 2020-10-14 18:09:24 UTC
I have the same issue, and moving them from the power/session section worked for a while (just reset every reboot)

I upgraded to 5.20 today, and now they're gone from the power/session section too.
Comment 5 Jishan Bhattacharya 2020-10-15 13:08:58 UTC
(In reply to Aditya Prajapati from comment #3)

> If you are using a custom dock/panel, can you try switching temporarily to
> the default one and see if this issue persists? Maybe this is not a KDE
> bug/issue.
Yes I tried switching to the default and it it does fix the problem. So it was because of latte dock?
Comment 6 Aditya Prajapati 2020-10-15 13:11:42 UTC
(In reply to Jishan Bhattacharya from comment #5)
> (In reply to Aditya Prajapati from comment #3)
> 
> > If you are using a custom dock/panel, can you try switching temporarily to
> > the default one and see if this issue persists? Maybe this is not a KDE
> > bug/issue.
> Yes I tried switching to the default and it it does fix the problem. So it
> was because of latte dock?

I am not sure. It does seem like a compatibility issue. I am unaware if it is from Latte dock's side or KDE's. I think you should raise a bug report there as well. Might help speed things up.
Comment 7 Jishan Bhattacharya 2020-10-15 13:15:27 UTC
Now the buttons are missing from my power session as well similar to what Issac reported lol.
Comment 8 Jishan Bhattacharya 2020-10-15 13:26:46 UTC
(In reply to Aditya Prajapati from comment #6)
> (In reply to Jishan Bhattacharya from comment #5)
> > (In reply to Aditya Prajapati from comment #3)
> > 
> > > If you are using a custom dock/panel, can you try switching temporarily to
> > > the default one and see if this issue persists? Maybe this is not a KDE
> > > bug/issue.
> > Yes I tried switching to the default and it it does fix the problem. So it
> > was because of latte dock?
> 
> I am not sure. It does seem like a compatibility issue. I am unaware if it
> is from Latte dock's side or KDE's. I think you should raise a bug report
> there as well. Might help speed things up.

Aditya have you tried with fresh new instance of the latte? Does this issue persist there?
Comment 9 Aditya Prajapati 2020-10-15 13:43:41 UTC
I just updated to v5.20.0-2 and restarted my system a couple of times. I can still find the options in my power/session section. I am not sure why this is such a random issue.

> Aditya have you tried with fresh new instance of the latte? Does this issue persist there?

I have uninstalled latte dock so I can't comment on that, sorry.

Also, my hibernate button seems to be missing from the confirm exit screen (the one you get when you select logout/restart/shutdown)
Comment 10 Jishan Bhattacharya 2020-10-15 16:38:01 UTC
(In reply to Aditya Prajapati from comment #9)
> I just updated to v5.20.0-2 and restarted my system a couple of times. I can
> still find the options in my power/session section. I am not sure why this
> is such a random issue.
> 
> > Aditya have you tried with fresh new instance of the latte? Does this issue persist there?
> 
> I have uninstalled latte dock so I can't comment on that, sorry.
> 
> Also, my hibernate button seems to be missing from the confirm exit screen
> (the one you get when you select logout/restart/shutdown)

Oh hibrenate wasn't also there for me. But if I remeber correctly, I installed some packages related to power and I got it after that. Sorry I don't remember what exactly the package name is but you can try searching for power related packages in arch.
Comment 11 heqromancer 2021-09-10 14:05:47 UTC
Most likely related: I am developing another fullscreen application launcher and I've had reports of people who also have their shutdown and restart buttons gone as well. I've also had the same experience recently, running the following

Operating System: EndeavourOS
KDE Plasma Version: 5.22.5
KDE Frameworks Version: 5.85.0
Qt Version: 5.15.2
Kernel Version: 5.13.13-arch1-1 (64-bit)
Graphics Platform: X11
Processors: 2 × Intel® Celeron® N4000 CPU @ 1.10GHz
Memory: 7,6 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics 600

The way we "feed" both our application launchers with said session management buttons. We both use an ItemGridView whose model is "systemFavorites". This is a model fed by the extremely troublesome rootModel API nobody knows how it exactly works and nobody involved seems to be willing to document it. (https://invent.kde.org/plasma/plasma-workspace/-/blob/master/applets/kicker/plugin/rootmodel.h). This is most likely the culprit, because it's extremely unlikely *both* this applet and mine are featuring the exact same bug.

As a workaround, I'm thinking of using the session management applet buttons that are available for download in the KDE Plasmoids store, but this code makes direct usage of qdbus calls which is similar to punching the fullscreen leave screen in the face, as it goes straight through it and won't even show it.
Comment 12 Vincent ROGER 2022-01-04 09:20:41 UTC
I am also facing the same issue on KDE neon (with kde 5.23.4). I also use latte dock and the shutdown and restart button disappear after a restart or a shutdown.
Comment 13 Oh, Min-Seok 2022-03-12 05:50:20 UTC
Same problem happens on Plasma 5.24 either.
Comment 14 Fushan Wen 2022-05-17 07:38:08 UTC
Git commit 2cc819f39bcce9ca83ab3767c42beb1e500e55b1 by Fushan Wen, on behalf of Amy Rose.
Committed on 17/05/2022 at 07:38.
Pushed by fusionfuture into branch 'master'.

applets/kicker: refresh RootModel on session backend state change

Hunting this one down since mid-March...

In "native" Plasma containments like the panel, desktop, and plasmawindowed, the `LogindSessionBackend` in `libkworkspace` enters the "Ready" state nearly instantly, before any signals can even be attached. In other containments like Latte Dock and plasmoidviewer, however, the initialization takes some time to complete (unsure why). RootModel was not watching or waiting to check what the session backend's state was, resulting in validity checks being done too soon and never checked again.

M  +1    -0    applets/kicker/plugin/rootmodel.cpp
M  +1    -0    applets/kicker/plugin/systementry.cpp
M  +1    -0    applets/kicker/plugin/systementry.h
M  +2    -0    applets/kicker/plugin/systemmodel.cpp
M  +3    -0    applets/kicker/plugin/systemmodel.h

https://invent.kde.org/plasma/plasma-workspace/commit/2cc819f39bcce9ca83ab3767c42beb1e500e55b1
Comment 15 Fushan Wen 2022-05-17 07:39:08 UTC
Git commit 766d220d96075f3aa6cc5c864ed7e5a5a188c186 by Fushan Wen, on behalf of Amy Rose.
Committed on 17/05/2022 at 07:39.
Pushed by fusionfuture into branch 'Plasma/5.24'.

applets/kicker: refresh RootModel on session backend state change

Hunting this one down since mid-March...

In "native" Plasma containments like the panel, desktop, and plasmawindowed, the `LogindSessionBackend` in `libkworkspace` enters the "Ready" state nearly instantly, before any signals can even be attached. In other containments like Latte Dock and plasmoidviewer, however, the initialization takes some time to complete (unsure why). RootModel was not watching or waiting to check what the session backend's state was, resulting in validity checks being done too soon and never checked again.


(cherry picked from commit 2cc819f39bcce9ca83ab3767c42beb1e500e55b1)

M  +1    -0    applets/kicker/plugin/rootmodel.cpp
M  +1    -0    applets/kicker/plugin/systementry.cpp
M  +1    -0    applets/kicker/plugin/systementry.h
M  +2    -0    applets/kicker/plugin/systemmodel.cpp
M  +3    -0    applets/kicker/plugin/systemmodel.h

https://invent.kde.org/plasma/plasma-workspace/commit/766d220d96075f3aa6cc5c864ed7e5a5a188c186